<resources>
    <string name="action_bar_take_photo">拍照识别</string>
    <string name="action_bar_realtime">实时识别</string>
    <string name="action_bar_back">&lt;</string>

    <string name="action_bar_model_name">模型名称</string>

    <string name="result_label">识别结果</string>

    <string name="result_table_header_index">序号</string>
    <string name="result_table_header_name">名称</string>
    <string name="result_table_header_confidence">置信度</string>

    <string name="operation_confidence_control">阈值控制</string>

    <string name="operation_retry">重新识别</string>
    <string name="operation_save">保存结果</string>
</resources>
