<?xml version="1.0" encoding="utf-8"?>
<com.baidu.ai.edge.ui.layout.CameraLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <com.baidu.ai.edge.ui.layout.ActionBarLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back_in_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cropToPadding="true"
            android:paddingLeft="40px"
            android:paddingRight="60px"
            android:paddingTop="60px"
            android:paddingBottom="40px"
            android:src="@drawable/back_btn" />

        <LinearLayout
            android:layout_marginTop="50px"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/action_takepicture_btn"
                style="@style/action_btn_selected"
                android:textSize="@dimen/action_btn_text_size"
                android:textAlignment="center"
                android:layout_width="300px"
                android:layout_height="wrap_content"
                android:text="@string/action_bar_take_photo" />

            <TextView
                android:id="@+id/action_realtime_btn"
                style="@style/action_btn"
                android:textAlignment="center"
                android:textSize="@dimen/action_btn_text_size"
                android:layout_width="300px"
                android:layout_height="wrap_content"
                android:text="@string/action_bar_realtime" />
        </LinearLayout>

        <ImageView
            android:id="@+id/menu_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cropToPadding="true"
            android:layout_alignParentRight="true"
            android:paddingLeft="40px"
            android:paddingRight="60px"
            android:paddingTop="60px"
            android:paddingBottom="40px"
            android:src="@drawable/more_menu" />

    </com.baidu.ai.edge.ui.layout.ActionBarLayout>

    <com.baidu.ai.edge.ui.layout.PreviewFrameLayout
        android:background="#CCC"
        android:id="@+id/preview_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.baidu.ai.edge.ui.view.PreviewView
            android:id="@+id/preview_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.baidu.ai.edge.ui.view.ResultMaskView
            android:id="@+id/realtime_result_mask"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.baidu.ai.edge.ui.view.PreviewDecoratorView
            android:visibility="gone"
            android:id="@+id/preview_decorator_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/rec_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ProgressBar
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_width="100px"
                android:layout_height="100px" />
        </RelativeLayout>
        <include
            layout="@layout/result_table_popview"
            android:id="@+id/result_table_popview"></include>
    </com.baidu.ai.edge.ui.layout.PreviewFrameLayout>

    <com.baidu.ai.edge.ui.layout.OperationFrameLayout
        android:id="@+id/operation_bar"
        android:layout_width="match_parent"
        android:layout_height="300px">

        <LinearLayout
            android:id="@+id/realtime_confidence_control"
            android:layout_width="match_parent"
            android:layout_height="120px"
            android:layout_marginTop="10px"
            android:paddingRight="30dp"
            android:paddingLeft="40dp"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="30px"
                android:text="@string/operation_confidence_control"
                android:layout_weight="2"
                android:textSize="30px"
                android:textColor="#FFFFFF"
                android:layout_gravity="center_vertical"
                android:gravity="right" />

            <SeekBar
                android:id="@+id/realtime_confidence_seekbar"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:maxHeight="12px"
                android:layout_weight="10"
                android:layout_gravity="center_vertical"
                android:thumb="@drawable/seekbar_thumb_invisible"
                android:progressDrawable="@drawable/seekbar_progress_realtime"
                android:splitTrack="false" />

            <TextView
                android:id="@+id/realtime_seekbar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#FFFFFF"
                android:layout_gravity="center_vertical"
                android:textSize="30px" />
        </LinearLayout>

        <ImageView
            android:id="@+id/takePicture"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/operation_btn_margin_top_take_picture"
            android:src="@drawable/take_picture_btn"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:id="@+id/switchSide"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/operation_btn_margin_top"
            android:background="@drawable/switch_side_btn"
            android:layout_toLeftOf="@+id/takePicture"
            android:layout_marginRight="130px" />

        <ImageView
            android:id="@+id/albumSelect"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/album_btn"
            android:layout_marginTop="@dimen/operation_btn_margin_top"
            android:layout_toRightOf="@+id/takePicture"
            android:layout_marginLeft="130px" />

        <ImageView
            android:id="@+id/realtime_toggle_btn"
            android:visibility="gone"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/operation_btn_margin_top_take_picture"
            android:src="@drawable/realtime_start_btn"
            android:layout_centerHorizontal="true" />
    </com.baidu.ai.edge.ui.layout.OperationFrameLayout>
</com.baidu.ai.edge.ui.layout.CameraLayout>